# robotframework-selfhealing-agents

./: .gitignore  LICENSE  README.md  pyproject.toml  tasks.py
.github/workflows/: ci.yml
SelfhealingAgents/: listener.py
SelfhealingAgents/self_healing_system/: kickoff_multi_agent_system.py  self_healing_engine.py
SelfhealingAgents/self_healing_system/agents/locator_agent/: appium_locator_agent.py  base_locator_agent.py  browser_locator_agent.py  locator_agent_factory.py  selenium_locator_agent.py
SelfhealingAgents/self_healing_system/agents/orchestrator_agent/: orchestrator_agent.py
SelfhealingAgents/self_healing_system/context_retrieving/: dom_soap_utils.py  dom_utility_factory.py  robot_ctx_retriever.py
SelfhealingAgents/self_healing_system/context_retrieving/library_dom_utils/: appium_dom_utils.py  browser_dom_utils.py  selenium_dom_utils.py
SelfhealingAgents/self_healing_system/llm/: client_model.py  model_factory.py
SelfhealingAgents/self_healing_system/reports/: locator_argument_analyzer.py  report_generator.py  report_info_persistence.py  robot_model_visitors.py
SelfhealingAgents/utils/: cfg.py  logfire_init.py  logging.py  reponse_converters.py
src/RobotAid/: __init__.py  config.yaml  listener.py
src/RobotAid/self_healing_system/: dom_utils.py  kickoff_multi_agent_system.py  kickoff_self_healing.py  reponse_converters.py  rerun.py  robot_ctx_fetcher.py  robot_ctx_retriever.py  robot_dom_utils.py  schemas.py  self_healing_engine.py
src/RobotAid/utils/: app_settings.py  cfg.py  client_settings.py  logfire_init.py  logging.py  reponse_converters.py
src/self_healing_system/: kickoff_self_healing.py  schemas.py
src/self_healing_system/agents/: locator_agent.py  orchestrator_agent.py
src/self_healing_system/clients/: azure_client.py  llm_client.py
tests/atest/: ait.robot  appium_saucedemo.robot  car_insurance.robot  car_kw_driven.robot  config_test.yaml  sauce_web.robot  the_internet_login.robot  todo_broken.robot
tests/atest/appium/: appium_saucedemo.robot
tests/atest/browser/: ait.robot  car_insurance.robot  car_kw_driven.robot  load_listener.robot  sauce_web.robot  sauce_web_complex_keyword.robot  sauce_web_external_resource.robot  the_internet_login.robot  todo_broken.robot
tests/atest/selenium/: ait.robot  car_insurance.robot  todo_broken.robot
tests/utest/: test_action_log_report.py  test_app_settings.py  test_appium_dom_utils.py  test_appium_locator_agent_and_prompts.py  test_base_locator_agent.py  test_browser_dom_utils.py  test_client_settings.py  test_diff_files_report.py  test_dom_soap_utils.py  test_dom_utility_factory.py  test_dom_utils.py  test_healed_files_report.py  test_kickoff_multi_agent_system.py  test_kickoff_self_healing.py  test_listener.py  test_locator_agent.py  test_locator_argument_analyzer.py  test_locator_converters.py  test_orchestrator_agent.py  test_report_generator.py  test_robot_ctx_retriever.py  test_selenium_dom_utils.py  test_self_healing_engine.py
utilities/: xom.py
(+77 files in other folders)
