[project]
name = "robotframework-aid"
version = "0.1.0"
description = ""
authors = [{ name = "MarketSquare - Robot Framework community" }]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic-ai>=0.5.0",
    "robotframework >=7.1",
    "beautifulsoup4 >=4.13.4",
    "pydantic-settings >=2.9.1",
    "lxml>=6.0.0"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "RobotAid", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "*"
invoke = "*"
coverage = "*"
robotframework-stacktrace = "*"
mkdocs-material = "*"

[project.entry-points."robot_aid.llm_model_providers"]
openai = "RobotAid.self_healing_system.llm.providers.openai_builder:openai_builder"
azure = "RobotAid.self_healing_system.llm.providers.azure_builder:azure_builder"
litellm = "RobotAid.self_healing_system.llm.providers.litellm_builder:litellm_builder"
