[project]
name = "robotframework-selfhealing-agents"
version = "0.1.4"
description = ""
authors = [
    { name = "viadee IT-Unternehmensberatung AG <julian.blanke@viadee.de>" },
    { name = "Many Kasiriha <many@robotframework.org>" },
]
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "pydantic-ai-slim[openai, azure, litellm]>=1.27.0",
    "robotframework >=7.1",
    "beautifulsoup4 >=4.13.4",
    "pydantic-settings >=2.9.1",
    "lxml>=6.0.0",
    "robotframework-browser>=19.12.0",
    "robotframework-seleniumlibrary>=6.8.0",
    "python-dotenv>=1.1.1",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "SelfhealingAgents" }]

[tool.poetry.group.dev.dependencies]
pytest = "*"
invoke = "*"
coverage = "*"
robotframework-stacktrace = "*"
mkdocs-material = "*"

[project.entry-points."SelfhealingAgents.llm_model_providers"]
openai = "SelfhealingAgents.self_healing_system.llm.providers.openai_builder:openai_builder"
azure = "SelfhealingAgents.self_healing_system.llm.providers.azure_builder:azure_builder"
litellm = "SelfhealingAgents.self_healing_system.llm.providers.litellm_builder:litellm_builder"
